<resources>
    <string name="app_name">BiblioCat</string>
    <string name="bibliocat">BiblioCat</string>
    <string name="book_counter">book counter</string>
    <string name="add_books">Add Books</string>
    <string name="my_books">My Books</string>
    <string name="my_collection">My Collection</string>
    <string name="outside_my_collection">Outside my Collection</string>
    <string name="share">Share Collection</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="wishlist">Wishlist</string>
    <string name="find_books">Find a book</string>
    <string name="what_i_read">what I read</string>
    <string name="cute_kat_sorting_books">cute kat sorting books</string>
    <string name="enter_book_manually">Manual add</string>
    <string name="add_with_cover">Add with Cover</string>
    <string name="search_online">Search Online</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="title">Book Title (Required)</string>
    <string name="author">Book Author(Required)</string>
    <string name="isbn">Book ISBN</string>
    <string name="publisher">Book Publisher</string>
    <string name="edition">Book Edition</string>
    <string name="pages">Number of pages</string>
    <string name="genre">Book Genre</string>
    <string name="year">Publication Year</string>
    <string name="price">Price Paid</string>
    <string name="add_book">Add Book</string>
    <string name="delete">Delete book</string>
    <string name="edit">Edit book</string>
    <string name="save">Save changes</string>
    <string name="add_a_book_to_wishlist">add a book to the wishlist</string>
    <string name="wishlist_toggle">Wishlist</string>
    <string name="book_cover">Book cover</string>
    <string name="read">Read</string>
    <string name="rating">Rating</string>
    <string name="book_cover_image" />
    <string name="cover_image">Cover Image</string>
    <string name="no_books_to_display">No books to display</string>
    <string name="no_books_read">No books read yet</string>
    <string name="books_read">Books Read</string>
    <string name="books_wanted">Books Wanted</string>
    <string name="books_collected">Books Collected</string>
    <string name="search_results">Search Results</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="search">Search</string>
    <string name="update_book">Update Book</string>
    <string name="back">Back</string>
    <string name="titleLabel">Title:</string>
    <string name="authorLabel">Author:</string>
    <string name="genreLabel">Genre:</string>
    <string name="isbnLabel">ISBN:</string>
    <string name="editionLabel">Edition:</string>
    <string name="pageLabel">Pages:</string>
    <string name="yearLabel">Year:</string>
    <string name="priceLabel">Price:</string>
    <string name="pubLabel">Publisher:</string>
    <string name="ratingLabel">Rating:</string>
    <plurals name="shelf_format">
        <item quantity="one">%1$d book in collection</item>
        <item quantity="other">%1$d books in collection</item>
    </plurals>
    <plurals name="wishlist_format">
        <item quantity="one">%1$d book in wishlist</item>
        <item quantity="other">%1$d books in wishlist</item>
    </plurals>
    <plurals name="book_read_format">
        <item quantity="one">%1$d book read</item>
        <item quantity="other">%1$d books read</item>
    </plurals>
    <plurals name="book_found_format">
        <item quantity="one">%1$d book found</item>
        <item quantity="other">%1$d books found</item>
    </plurals>
    <string-array name="genre_array">
        <item>"nothing selected"</item>
        <item>Non-Fiction</item>
        <item>Fiction</item>
        <item>Fantasy</item>
        <item>Science Fiction</item>
        <item>Mystery</item>
        <item>Horror</item>
        <item>Historical Fiction</item>
        <item>Biography</item>
        <item>Autobiography</item>
        <item>Science</item>
        <item>Self-Help</item>
        <item>Travel</item>
        <!-- Add more genres here -->
    </string-array>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="internet_search">Internet Search</string>
    <string name="enter_book_title">Enter book title</string>
</resources>