<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".view.AddBooksActivity">

    <TextView
        android:id="@+id/bookCounterTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/book_counter"
        android:textSize="30sp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/buttonField"
        style="@style/ButtonFieldStyle"
        app:columnOrderPreserved="true"
        app:columnCount="2"
        app:rowCount="3">

        <Button
            android:id="@+id/enterBookManuallyBtn"
            style="@style/ButtonStyle1"
            android:onClick="enterBookManually"
            android:text="@string/enter_book_manually"
            app:layout_gravity="center"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/coverBtn"
            style="@style/ButtonStyle1"
            android:onClick="getCover"
            android:text="@string/add_with_cover"
            app:layout_gravity="center"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/searchOnlineBtn"
            style="@style/ButtonStyle1"
            android:onClick="searchOnline"
            android:text="@string/search_online"
            app:layout_gravity="center"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/scanBarcodeBtn"
            style="@style/ButtonStyle1"
            android:onClick="scanBarcode"
            android:text="@string/scan_barcode"
            app:layout_gravity="center"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/BackBtn"
            style="@style/ButtonStyle1"
            android:onClick="back"
            android:text="@string/back"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="center"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_book_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>