<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/book_counter"
        android:textSize="30sp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/buttonField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|fill_horizontal|fill_vertical"
        android:background="@color/dark_blue"
        app:columnCount="2"
        app:columnOrderPreserved="true"
        app:rowCount="3">

        <Button
            android:id="@+id/addBooksBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:gravity="center|center_vertical"
            android:onClick="openAddBooksActivity"
            android:text="@string/add_books"
            app:layout_column="0"
            app:layout_gravity="center|fill_horizontal"
            app:layout_row="0" />

        <Button
            android:id="@+id/bookshelf"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="openBookshelfActivity"
            android:text="@string/bookshelf"
            app:layout_column="1"
            app:layout_gravity="center|fill_horizontal"
            app:layout_row="0" />

        <Button
            android:id="@+id/shareBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:onClick="openShareActivity"
            android:text="@string/share"
            app:layout_column="1"
            app:layout_gravity="center|fill_horizontal"
            app:layout_row="1" />

        <Button
            android:id="@+id/wishlistBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:onClick="openWishlistActivity"
            android:text="@string/wishlist"
            app:layout_column="0"
            app:layout_gravity="center|fill_horizontal" />

        <Button
            android:id="@+id/whatAmIReadingBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/dark_green"
            android:onClick="openWhatAmIReadingActivity"
            android:text="@string/whatAmIReading"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="center|fill_horizontal"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>


</LinearLayout>