<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/isbnTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <!-- Add more TextViews for other book details as needed -->

            <!--TODO: convert buttons to icons instead of text and rearrange them in the layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/deleteButton"
                    style="@style/ButtonStyle1"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/editButton"
                    style="@style/ButtonStyle1"
                    android:text="@string/edit" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/coverImageView"
            android:layout_width="111dp"
            android:layout_height="159dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/book_cover"
            android:src="@drawable/madkatcvr" />

    </LinearLayout>

</androidx.cardview.widget.CardView>